fix: contrast footer links comply AA/AAA (#321)

--- a/src/layout/layout.module.css
+++ b/src/layout/layout.module.css
@@ -254,12 +254,13 @@
   margin-bottom: 0.6rem;
 }
 .footer__item a {
-  color: var(--color-primary);
+  color: var(--color-secondary2);
   text-decoration: none;
-  border-bottom: 1px solid var(--color-primary);
+  border-bottom: 1px solid var(--color-secondary2);
   padding-bottom: 0.1rem;
   transition: border-bottom 200ms ease-out;
 }
 .footer__item a:hover {
-  border-bottom: 1px solid var(--color-secondary2);
+  color: var(--color-secondary2__shade1);
+  border-bottom: 1px solid var(--color-primary);
 }
